<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <!-- Request Text -->
    <TextView
        android:id="@+id/notification_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="follow request"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/accept_request"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/accept_request"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="accept"
        android:scaleType="fitCenter"
        android:src="@drawable/yes_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deny_request"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deny_request"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/no_icon"
        android:contentDescription="deny"
        android:scaleType="fitCenter"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
