...
        app:layout_constraintBottom_toBottomOf="@id/notifications_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/notifications_toolbar"/>

    <!-- Tab Layout -->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/notifications_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundGreen"
        app:tabGravity="fill"
        app:tabIndicatorColor="@color/secondaryGreen"
        app:tabMode="fixed"
...
